fix overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body,
 #root {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 *{
